--- a/uart/CMakeLists.txt
+++ b/uart/CMakeLists.txt
@@ -2,4 +2,6 @@ if (NOT PICO_NO_HARDWARE)
     add_subdirectory(hello_uart)
     add_subdirectory(lcd_uart)
     add_subdirectory(uart_advanced)
+    add_subdirectory(uart_exercise)
+    add_subdirectory(uart_rx)
 endif ()
