--- a/gpio/hello_gpio_irq/CMakeLists.txt
+++ b/gpio/hello_gpio_irq/CMakeLists.txt
@@ -4,6 +4,7 @@ add_executable(hello_gpio_irq
 
 # pull in common dependencies
 target_link_libraries(hello_gpio_irq pico_stdlib)
+pico_enable_stdio_usb(hello_gpio_irq 1)
 
 # create map/bin/hex file etc.
 pico_add_extra_outputs(hello_gpio_irq)
