--- a/timer/hello_timer/CMakeLists.txt
+++ b/timer/hello_timer/CMakeLists.txt
@@ -4,6 +4,7 @@ add_executable(hello_timer
 
 # pull in common dependencies
 target_link_libraries(hello_timer pico_stdlib)
+pico_enable_stdio_usb(hello_timer 1)
 
 # create map/bin/hex file etc.
 pico_add_extra_outputs(hello_timer)
