--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,6 +48,7 @@ add_subdirectory(picoboard)
 add_subdirectory(pico_w)
 add_subdirectory(pio)
 add_subdirectory(pwm)
+add_subdirectory(pwm_adc)
 add_subdirectory(reset)
 add_subdirectory(rtc)
 add_subdirectory(spi)
