--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,6 +47,7 @@ add_subdirectory(interp)
 add_subdirectory(multicore)
 add_subdirectory(picoboard)
 add_subdirectory(pico_w)
+add_subdirectory(pid)
 add_subdirectory(pio)
 add_subdirectory(pwm)
 add_subdirectory(pwm_adc)
