add: final lab test

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,6 +49,7 @@ add_subdirectory(picoboard)
 add_subdirectory(pico_w)
 add_subdirectory(pid)
 add_subdirectory(pio)
+add_subdirectory(practical_test)
 add_subdirectory(pwm)
 add_subdirectory(pwm_adc)
 add_subdirectory(reset)
